# stool-pigeon

./: .dockerignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  k8s-manifest.yaml  pyproject.toml  requirements.txt  run_dev.sh
.github/workflows/: docker-publish.yml
docs/: django-partials.md  htmx -  HX-Trigger.md  htmx - event triggers.md
pigeon/: asgi.py  production.py  settings.py  settings_k8s.py  urls.py  wsgi.py
static/css/: style.css
static/js/: main.js
stool/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
stool/management/commands/: setup_site.py
stool/migrations/: 0001_initial.py  0002_stoolrecord_pain.py  0003_stoolrecord_user.py  0004_alter_stoolrecord_user.py  0005_stoolrecord_blood_in_stool_and_more.py
templates/: base.html
templates/account/: email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/socialaccount/: connections.html
templates/socialaccount/snippets/: provider_list.html
templates/stool/: home.html
templates/stool/partials/: records_list.html  stool_stats.html
