[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stool-pigeon"
version = "0.1.0"
description = "Stool Pigeon Django Application"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "cryptography==44.0.2",
    "Django==5.1.7",
    "django-allauth==65.5.0",
    "django-bootstrap5==25.1",
    "django-htmx==1.23.0",
    "idna==3.10",
    "numpy==2.2.4",
    "oauthlib==3.2.2",
    "pycparser==2.22",
    "PyJWT==2.10.1",
    "python-oauth2==1.1.1",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "sqlparse==0.5.3",
    "urllib3==2.3.0",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.setuptools]
packages = ["pigeon", "stool"]
